# adf

esp-adf/: CMakeLists.txt
esp-adf/components/audio_board/: CMakeLists.txt  Kconfig.projbuild  component.mk
esp-adf/components/audio_board/a1s/: a1s_board.h  board_pins_config.c
esp-adf/components/audio_board/aithinker/: board.c  board.h  board_def.h  board_pins_config.c
esp-adf/components/audio_board/include/: func.c  headphone_detect.h  tw_spi_access.h  vprocTwolf_access.h
esp-adf/components/audio_board/lyrat_v4_3/: board.h
esp-adf/components/audio_hal/: CMakeLists.txt  CMakeLists.txt.old  component.mk
esp-adf/components/audio_hal/driver/ac101/: ac101.c  ac101.h
esp-adf/components/audio_hal/driver/es8374/: es8374.h
esp-adf/components/audio_hal/include/: audio_hal.h  audio_hal.h.bak2  audio_hal.h.old
esp-adf/components/audio_pipeline/: audio_element.c.old  audio_pipeline.c
esp-adf/components/audio_pipeline/include/: audio_element.h.old  audio_event_iface.h.old  audio_pipeline.h.old
esp-adf/components/audio_stream/: http_stream.c
esp-adf/components/audio_stream/test/: http_stream_test.c
esp-adf/components/bluetooth_service/: CMakeLists.txt  component.mk
esp-adf/components/clouds/: CMakeLists.txt
esp-adf/components/display_service/: display_service.c
esp-adf/components/esp-adf-libs/: CMakeLists.txt  CMakeLists.txt.old
esp-adf/components/esp-adf-libs/esp_audio/include/: audio_def.h  esp_audio.h
esp-adf/components/esp-adf-libs/esp_codec/: filter_resample.0LD
esp-adf/components/esp-adf-libs/esp_codec/include/codec/: audio_type_def.h  downmix.h
esp-adf/components/esp-sr/: CMakeLists.txt  Kconfig.projbuild
esp-adf/components/esp_actions/: player_action.c
esp-adf/components/esp_peripherals/: CMakeLists.txt  esp_peripherals.c  periph_console.c  periph_spiffs.c  periph_wifi.c  periph_wifi.new  periph_wifi.old  periph_ws2812.c
esp-adf/components/esp_peripherals/include/: periph_console.h  periph_wifi.h  periph_wifi.new
esp-adf/components/esp_peripherals/lib/touch/: touch.c
esp-adf/components/esp_peripherals/test/: esp_peripherals_test.c
esp-adf/components/playlist/: playlist.c.old
esp-adf/components/playlist/playlist_operator/: dram_list.c
esp-adf/components/wifi_service/: CMakeLists.txt
esp-adf/components/wifi_service/airkiss_config/: airkiss_config.c
esp-adf/components/wifi_service/smart_config/: smart_config.c
esp-adf/components/wifi_service/src/: wifi_service.c
esp-adf/docs/en/get-started/: get-started-esp32-lyrat-mini.rst
esp-adf/examples/Ka_mod/: .cproject  .project  sdkconfig  sdkconfig.old  version.txt
esp-adf/examples/Ka_mod/boards/: esptool.py  gen.sh  radiva52.csv  radiva84.csv  ttgotm.csv
esp-adf/examples/Ka_mod/components/audio_player/: audio_player.c
esp-adf/examples/Ka_mod/components/audio_renderer/: audio_renderer.c
esp-adf/examples/Ka_mod/components/fdk-aac-oreo-m8/libAACdec/src/: aacdecoder.cpp  aacdecoder_lib.cpp
esp-adf/examples/Ka_mod/components/fdk-aac-oreo-m8/libMpegTPDec/src/: tpdec_asc.cpp  tpdec_latm.cpp  tpdec_lib.cpp
esp-adf/examples/Ka_mod/components/fdk-aac-oreo-m8/libPCMutils/src/: pcmutils_lib.cpp
esp-adf/examples/Ka_mod/components/fdk-aac-oreo-m8/libSYS/include/: genericStds.h  machine_type.h
esp-adf/examples/Ka_mod/components/fdk-aac-oreo-m8/libSYS/src/: genericStds.cpp
esp-adf/examples/Ka_mod/components/mad/: align.h
esp-adf/examples/Ka_mod/components/ucglib/csrc/: ucg_esp32_hal.c
esp-adf/examples/Ka_mod/for_idf_replace/esp-idf/components/fatfs/src/: ff.c
esp-adf/examples/Ka_mod/for_idf_replace/esp-idf/components/wpa_supplicant/: CMakeLists.txt  component.mk
esp-adf/examples/Ka_mod/main/: CMakeLists.txt  ClickButtons.c  ac101.c  addon.c  addonu8g2.c  addonucg.c  app_main.c  audio_hal.c  board_pins_config.c  cencode.c  custom.c  eeprom.c  gpio.c  interface.c  irnec.c  ntp.c  ota.c  vs1053.c  vs1053b-patches.c  webclient.c  webserver.c  websocket.c
esp-adf/examples/Ka_mod/main/include/: ac101.h  app_main.h  audio_hal.h  eeprom.h  interface.h  pin_conf.h
esp-adf/examples/Ka_mod/webpage/: extensions  favicon  favicon2  index  index.html  infos  logo  logo2  script  script.js  style  style1  version32
esp-adf/examples/Ka_orig/: README.md
esp-adf/examples/Ka_orig/components/audio_renderer/: audio_renderer.c
esp-adf/examples/Ka_orig/components/fdk-aac-oreo-m8/libAACdec/src/: aacdecoder.cpp
esp-adf/examples/Ka_orig/components/fdk-aac-oreo-m8/libFDK/include/: fft.h
esp-adf/examples/Ka_orig/components/fdk-aac-oreo-m8/libFDK/src/: fft.cpp
esp-adf/examples/Ka_orig/components/fdk-aac-oreo-m8/libMpegTPDec/src/: tpdec_asc.cpp  tpdec_lib.cpp
esp-adf/examples/Ka_orig/components/fdk-aac-oreo-m8/libPCMutils/src/: pcmutils_lib.cpp
esp-adf/examples/Ka_orig/components/ucglib/csrc/: ucg_dev_ic_st7789.c  ucg_dev_oled_128x128_univision.c  ucg_dev_tft_132x132_pcf8833.c  ucg_dev_tft_240x320_st7789.c
esp-adf/examples/Ka_orig/main/: addon.c  addonu8g2.c  addonucg.c  addonucg.old  cencode.c  irnec.c  webclient.c  webserver.c  websocket.c
esp-adf/examples/Ka_orig/main/include/: addoncommon.h
esp-adf/examples/advanced_examples/esp_dispatcher_dueros/main/: audio_setup.c  esp_dispatcher_dueros_app.c
esp-adf/examples/dueros/main/: dueros_app.c
esp-adf/examples/i2c/main/: Kconfig.projbuild  i2c_example_main.c
esp-adf/examples/pipe/: CMakeLists.txt
esp-adf/examples/player/: sdkconfig  sdkconfig.default
esp-adf/examples/player/main/: CMakeLists.txt  Kconfig.projbuild  play_http_mp3_example.c
