idf_component_register(SRCS 
"ac101.c"
"addon.c"
"addoncommon.c"
"addonu8g2.c"
"addonucg.c"
"app_main.c"
"audio_hal.c"
"board_pins_config.c"
"cencode.c"
"ClickButtons.c"
"ClickEncoder.c"
"ClickJoystick.c"
"custom.c"
"eeprom.c"
"gpio.c"
"interface.c"
"irnec.c"
"ntp.c"
"ota.c"
"servers.c"
"telnet.c"
"timezone.c"
"vs1053.c"
"vs1053b-patches.c"
"webclient.c"
"webserver.c"
"websocket.c"

"../components/audio_player/audio_player.c"
"../components/audio_renderer/audio_renderer.c"
"../components/common/common_buffer.c"
"../components/fdk-aac_decoder/fdk_aac_decoder.c"
"../components/fifo/spiram_fifo.c"
"../components/mad/align.c"
"../components/mad/bit.c"
"../components/mad/decoder.c"
"../components/mad/fixed.c"
"../components/mad/frame.c"
"../components/mad/huffman.c"
"../components/mad/layer12.c"
"../components/mad/layer3.c"
"../components/mad/stream.c"
"../components/mad/synth_stereo.c"
"../components/mad/timer.c"
"../components/mad/version.c"
"../components/MerusAudio/MerusAudio.c"
"../components/mp3_decoder/mp3_decoder.c"
"../components/u8g2/csrc/u8g2_bitmap.c"
"../components/u8g2/csrc/u8g2_box.c"
"../components/u8g2/csrc/u8g2_buffer.c"
"../components/u8g2/csrc/u8g2_circle.c"
"../components/u8g2/csrc/u8g2_cleardisplay.c"
"../components/u8g2/csrc/u8g2_d_memory.c"
"../components/u8g2/csrc/u8g2_d_setup.c"
"../components/u8g2/csrc/u8g2_esp32_hal.c"
"../components/u8g2/csrc/u8g2_font.c"
"../components/u8g2/csrc/u8g2_fonts.c"
"../components/u8g2/csrc/u8g2_hvline.c"
"../components/u8g2/csrc/u8g2_input_value.c"
"../components/u8g2/csrc/u8g2_intersection.c"
"../components/u8g2/csrc/u8g2_karadio32_fonts.c"
"../components/u8g2/csrc/u8g2_kerning.c"
"../components/u8g2/csrc/u8g2_line.c"
"../components/u8g2/csrc/u8g2_ll_hvline.c"
"../components/u8g2/csrc/u8g2_message.c"
"../components/u8g2/csrc/u8g2_polygon.c"
"../components/u8g2/csrc/u8g2_selection_list.c"
"../components/u8g2/csrc/u8g2_setup.c"
"../components/u8g2/csrc/u8x8_8x8.c"
"../components/u8g2/csrc/u8x8_byte.c"
"../components/u8g2/csrc/u8x8_cad.c"
"../components/u8g2/csrc/u8x8_debounce.c"
"../components/u8g2/csrc/u8x8_display.c"
"../components/u8g2/csrc/u8x8_d_a2printer.c"
"../components/u8g2/csrc/u8x8_d_il3820_296x128.c"
"../components/u8g2/csrc/u8x8_d_ist3020.c"
"../components/u8g2/csrc/u8x8_d_ks0108.c"
"../components/u8g2/csrc/u8x8_d_lc7981.c"
"../components/u8g2/csrc/u8x8_d_ld7032_60x32.c"
"../components/u8g2/csrc/u8x8_d_ls013b7dh03.c"
"../components/u8g2/csrc/u8x8_d_max7219.c"
"../components/u8g2/csrc/u8x8_d_pcd8544_84x48.c"
"../components/u8g2/csrc/u8x8_d_pcf8812.c"
"../components/u8g2/csrc/u8x8_d_pcf8814_hx1230.c"
"../components/u8g2/csrc/u8x8_d_sbn1661.c"
"../components/u8g2/csrc/u8x8_d_sed1330.c"
"../components/u8g2/csrc/u8x8_d_sh1107.c"
"../components/u8g2/csrc/u8x8_d_ssd1305.c"
"../components/u8g2/csrc/u8x8_d_ssd1306_128x32.c"
"../components/u8g2/csrc/u8x8_d_ssd1306_128x64_noname.c"
"../components/u8g2/csrc/u8x8_d_ssd1306_64x32.c"
"../components/u8g2/csrc/u8x8_d_ssd1306_64x48.c"
"../components/u8g2/csrc/u8x8_d_ssd1306_96x16.c"
"../components/u8g2/csrc/u8x8_d_ssd1309.c"
"../components/u8g2/csrc/u8x8_d_ssd1322.c"
"../components/u8g2/csrc/u8x8_d_ssd1325.c"
"../components/u8g2/csrc/u8x8_d_ssd1326.c"
"../components/u8g2/csrc/u8x8_d_ssd1327.c"
"../components/u8g2/csrc/u8x8_d_ssd1329.c"
"../components/u8g2/csrc/u8x8_d_ssd1606_172x72.c"
"../components/u8g2/csrc/u8x8_d_ssd1607_200x200.c"
"../components/u8g2/csrc/u8x8_d_st75256.c"
"../components/u8g2/csrc/u8x8_d_st7565.c"
"../components/u8g2/csrc/u8x8_d_st7567.c"
"../components/u8g2/csrc/u8x8_d_st7588.c"
"../components/u8g2/csrc/u8x8_d_st7920.c"
"../components/u8g2/csrc/u8x8_d_stdio.c"
"../components/u8g2/csrc/u8x8_d_t6963.c"
"../components/u8g2/csrc/u8x8_d_uc1601.c"
"../components/u8g2/csrc/u8x8_d_uc1604.c"
"../components/u8g2/csrc/u8x8_d_uc1608.c"
"../components/u8g2/csrc/u8x8_d_uc1610.c"
"../components/u8g2/csrc/u8x8_d_uc1611.c"
"../components/u8g2/csrc/u8x8_d_uc1617.c"
"../components/u8g2/csrc/u8x8_d_uc1638.c"
"../components/u8g2/csrc/u8x8_d_uc1701_dogs102.c"
"../components/u8g2/csrc/u8x8_d_uc1701_mini12864.c"
"../components/u8g2/csrc/u8x8_fonts.c"
"../components/u8g2/csrc/u8x8_gpio.c"
"../components/u8g2/csrc/u8x8_input_value.c"
"../components/u8g2/csrc/u8x8_message.c"
"../components/u8g2/csrc/u8x8_selection_list.c"
"../components/u8g2/csrc/u8x8_setup.c"
"../components/u8g2/csrc/u8x8_string.c"
"../components/u8g2/csrc/u8x8_u16toa.c"
"../components/u8g2/csrc/u8x8_u8toa.c"
"../components/ucglib/csrc/ucg_bitmap.c"
"../components/ucglib/csrc/ucg_box.c"
"../components/ucglib/csrc/ucg_ccs.c"
"../components/ucglib/csrc/ucg_circle.c"
"../components/ucglib/csrc/ucg_clip.c"
"../components/ucglib/csrc/ucg_com_msg_api.c"
"../components/ucglib/csrc/ucg_dev_default_cb.c"
"../components/ucglib/csrc/ucg_dev_ic_ili9163.c"
"../components/ucglib/csrc/ucg_dev_ic_ili9325.c"
"../components/ucglib/csrc/ucg_dev_ic_ili9325_spi.c"
"../components/ucglib/csrc/ucg_dev_ic_ili9341.c"
"../components/ucglib/csrc/ucg_dev_ic_ld50t6160.c"
"../components/ucglib/csrc/ucg_dev_ic_pcf8833.c"
"../components/ucglib/csrc/ucg_dev_ic_seps225.c"
"../components/ucglib/csrc/ucg_dev_ic_ssd1289.c"
"../components/ucglib/csrc/ucg_dev_ic_ssd1331.c"
"../components/ucglib/csrc/ucg_dev_ic_ssd1351.c"
"../components/ucglib/csrc/ucg_dev_ic_st7735.c"
"../components/ucglib/csrc/ucg_dev_ic_st7735L.c"
"../components/ucglib/csrc/ucg_dev_ic_st7735S.c"
"../components/ucglib/csrc/ucg_dev_ic_st7735W.c"
"../components/ucglib/csrc/ucg_dev_ic_st7789.c"
"../components/ucglib/csrc/ucg_dev_ic_st7789_240x240.c"
"../components/ucglib/csrc/ucg_dev_msg_api.c"
"../components/ucglib/csrc/ucg_dev_oled_128x128_ft.c"
"../components/ucglib/csrc/ucg_dev_oled_128x128_ilsoft.c"
"../components/ucglib/csrc/ucg_dev_oled_128x128_univision.c"
"../components/ucglib/csrc/ucg_dev_oled_160x128_samsung.c"
"../components/ucglib/csrc/ucg_dev_oled_96x64_univision.c"
"../components/ucglib/csrc/ucg_dev_tft_128x128_ili9163.c"
"../components/ucglib/csrc/ucg_dev_tft_128x128_st7735.c"
"../components/ucglib/csrc/ucg_dev_tft_128x160_st7735.c"
"../components/ucglib/csrc/ucg_dev_tft_128x160_W_st7735.c"
"../components/ucglib/csrc/ucg_dev_tft_132x132_pcf8833.c"
"../components/ucglib/csrc/ucg_dev_tft_240x240_st7789.c"
"../components/ucglib/csrc/ucg_dev_tft_240x320_ili9325_spi.c"
"../components/ucglib/csrc/ucg_dev_tft_240x320_ili9341.c"
"../components/ucglib/csrc/ucg_dev_tft_240x320_itdb02.c"
"../components/ucglib/csrc/ucg_dev_tft_240x320_ssd1289.c"
"../components/ucglib/csrc/ucg_dev_tft_240x320_st7789.c"
"../components/ucglib/csrc/ucg_dev_tft_80x160_st7735.c"
"../components/ucglib/csrc/ucg_esp32_hal.c"
"../components/ucglib/csrc/ucg_font.c"
"../components/ucglib/csrc/ucg_init.c"
"../components/ucglib/csrc/ucg_karadio32_fonts.c"
"../components/ucglib/csrc/ucg_line.c"
"../components/ucglib/csrc/ucg_pixel.c"
"../components/ucglib/csrc/ucg_pixel_font_data.c"
"../components/ucglib/csrc/ucg_polygon.c"
"../components/ucglib/csrc/ucg_rotate.c"
"../components/ucglib/csrc/ucg_scale.c"
"../components/ucglib/csrc/ucg_vector_font_data.c"
"../components/xpt2046/xpt2046.c"
"../components/audio_player/include/audio_player.h"
"../components/audio_renderer/include/audio_renderer.h"
"../components/common/include/common_buffer.h"
"../components/common/include/common_component.h"
"../components/common/include/common_utils.h"
"../components/fdk-aac-oreo-m8/libAACdec/include/aacdecoder_lib.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_drc.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_drc_types.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_hcr.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_hcrs.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_hcr_bit.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_hcr_types.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_pns.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aacdec_tns.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aac_ram.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/aac_rom.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/block.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/channel.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/channelinfo.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/conceal.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/conceal_types.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/debug.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/ldfiltbank.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/overlapadd.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/pulsedata.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/rvlc.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/rvlcbit.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/rvlcconceal.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/rvlc_info.h"
"../components/fdk-aac-oreo-m8/libAACdec/src/stereo.h"
"../components/fdk-aac-oreo-m8/libAACenc/include/aacenc_lib.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/aacenc.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/aacenc_pns.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/aacEnc_ram.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/aacEnc_rom.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/aacenc_tns.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/adj_thr.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/adj_thr_data.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/bandwidth.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/band_nrg.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/bitenc.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/bit_cnt.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/block_switch.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/channel_map.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/chaosmeasure.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/dyn_bits.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/grp_data.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/intensity.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/interface.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/line_pe.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/metadata_compressor.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/metadata_main.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/ms_stereo.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/noisedet.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/pnsparam.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/pns_func.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/pre_echo_control.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/psy_configuration.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/psy_const.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/psy_data.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/psy_main.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/qc_data.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/qc_main.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/quantize.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/sf_estim.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/spreading.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/tns_func.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/tonality.h"
"../components/fdk-aac-oreo-m8/libAACenc/src/transform.h"
"../components/fdk-aac-oreo-m8/libFDK/include/abs.h"
"../components/fdk-aac-oreo-m8/libFDK/include/autocorr2nd.h"
"../components/fdk-aac-oreo-m8/libFDK/include/clz.h"
"../components/fdk-aac-oreo-m8/libFDK/include/common_fix.h"
"../components/fdk-aac-oreo-m8/libFDK/include/cplx_mul.h"
"../components/fdk-aac-oreo-m8/libFDK/include/dct.h"
"../components/fdk-aac-oreo-m8/libFDK/include/FDK_archdef.h"
"../components/fdk-aac-oreo-m8/libFDK/include/FDK_bitbuffer.h"
"../components/fdk-aac-oreo-m8/libFDK/include/FDK_bitstream.h"
"../components/fdk-aac-oreo-m8/libFDK/include/FDK_core.h"
"../components/fdk-aac-oreo-m8/libFDK/include/FDK_crc.h"
"../components/fdk-aac-oreo-m8/libFDK/include/FDK_hybrid.h"
"../components/fdk-aac-oreo-m8/libFDK/include/FDK_tools_rom.h"
"../components/fdk-aac-oreo-m8/libFDK/include/FDK_trigFcts.h"
"../components/fdk-aac-oreo-m8/libFDK/include/fft.h"
"../components/fdk-aac-oreo-m8/libFDK/include/fft_rad2.h"
"../components/fdk-aac-oreo-m8/libFDK/include/fixmadd.h"
"../components/fdk-aac-oreo-m8/libFDK/include/fixminmax.h"
"../components/fdk-aac-oreo-m8/libFDK/include/fixmul.h"
"../components/fdk-aac-oreo-m8/libFDK/include/fixpoint_math.h"
"../components/fdk-aac-oreo-m8/libFDK/include/mdct.h"
"../components/fdk-aac-oreo-m8/libFDK/include/qmf.h"
"../components/fdk-aac-oreo-m8/libFDK/include/scale.h"
"../components/fdk-aac-oreo-m8/libFDK/include/scramble.h"
"../components/fdk-aac-oreo-m8/libFDK/include/arm/clz_arm.h"
"../components/fdk-aac-oreo-m8/libFDK/include/arm/cplx_mul.h"
"../components/fdk-aac-oreo-m8/libFDK/include/arm/fixmadd_arm.h"
"../components/fdk-aac-oreo-m8/libFDK/include/arm/fixmul_arm.h"
"../components/fdk-aac-oreo-m8/libFDK/include/arm/scale.h"
"../components/fdk-aac-oreo-m8/libFDK/include/arm/scramble.h"
"../components/fdk-aac-oreo-m8/libFDK/include/mips/abs_mips.h"
"../components/fdk-aac-oreo-m8/libFDK/include/mips/clz_mips.h"
"../components/fdk-aac-oreo-m8/libFDK/include/mips/cplx_mul.h"
"../components/fdk-aac-oreo-m8/libFDK/include/mips/fixmadd_mips.h"
"../components/fdk-aac-oreo-m8/libFDK/include/mips/fixmul_mips.h"
"../components/fdk-aac-oreo-m8/libFDK/include/mips/scale.h"
"../components/fdk-aac-oreo-m8/libFDK/include/mips/scramble.h"
"../components/fdk-aac-oreo-m8/libFDK/include/x86/abs_x86.h"
"../components/fdk-aac-oreo-m8/libFDK/include/x86/clz_x86.h"
"../components/fdk-aac-oreo-m8/libFDK/include/x86/fixmul_x86.h"
"../components/fdk-aac-oreo-m8/libFDK/include/xtensa/abs_xtensa.h"
"../components/fdk-aac-oreo-m8/libFDK/include/xtensa/clz_xtensa.h"
"../components/fdk-aac-oreo-m8/libFDK/include/xtensa/fixmul_xtensa.h"
"../components/fdk-aac-oreo-m8/libMpegTPDec/include/mpegFileRead.h"
"../components/fdk-aac-oreo-m8/libMpegTPDec/include/tpdec_lib.h"
"../components/fdk-aac-oreo-m8/libMpegTPDec/include/tp_data.h"
"../components/fdk-aac-oreo-m8/libMpegTPDec/src/mpegFileFormat.h"
"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_adif.h"
"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_adts.h"
"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_drm.h"
"../components/fdk-aac-oreo-m8/libMpegTPDec/src/tpdec_latm.h"
"../components/fdk-aac-oreo-m8/libMpegTPEnc/include/mpegFileWrite.h"
"../components/fdk-aac-oreo-m8/libMpegTPEnc/include/tpenc_lib.h"
"../components/fdk-aac-oreo-m8/libMpegTPEnc/include/tp_data.h"
"../components/fdk-aac-oreo-m8/libMpegTPEnc/src/tpenc_adif.h"
"../components/fdk-aac-oreo-m8/libMpegTPEnc/src/tpenc_adts.h"
"../components/fdk-aac-oreo-m8/libMpegTPEnc/src/tpenc_asc.h"
"../components/fdk-aac-oreo-m8/libMpegTPEnc/src/tpenc_latm.h"
"../components/fdk-aac-oreo-m8/libPCMutils/include/limiter.h"
"../components/fdk-aac-oreo-m8/libPCMutils/include/pcmutils_lib.h"
"../components/fdk-aac-oreo-m8/libSBRdec/include/sbrdecoder.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/env_calc.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/env_dec.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/env_extr.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/huff_dec.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/lpp_tran.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/psbitdec.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/psdec.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/psdec_hybrid.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/sbrdec_drc.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/sbrdec_freq_sca.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_crc.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_deb.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_dec.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_ram.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_rom.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/sbr_scale.h"
"../components/fdk-aac-oreo-m8/libSBRdec/src/transcendent.h"
"../components/fdk-aac-oreo-m8/libSBRenc/include/sbr_encoder.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/bit_sbr.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/cmondata.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/code_env.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/env_bit.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/env_est.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/fram_gen.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/invf_est.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/mh_det.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/nf_est.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/ps_bitenc.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/ps_const.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/ps_encode.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/ps_main.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/resampler.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/sbr.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/sbrenc_freq_sca.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/sbr_def.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/sbr_misc.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/sbr_ram.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/sbr_rom.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/ton_corr.h"
"../components/fdk-aac-oreo-m8/libSBRenc/src/tran_det.h"
"../components/fdk-aac-oreo-m8/libSYS/include/audio.h"
"../components/fdk-aac-oreo-m8/libSYS/include/cmdl_parser.h"
"../components/fdk-aac-oreo-m8/libSYS/include/conv_string.h"
"../components/fdk-aac-oreo-m8/libSYS/include/FDK_audio.h"
"../components/fdk-aac-oreo-m8/libSYS/include/genericStds.h"
"../components/fdk-aac-oreo-m8/libSYS/include/machine_type.h"
"../components/fdk-aac-oreo-m8/libSYS/include/wav_file.h"
"../components/fdk-aac_decoder/include/fdk_aac_decoder.h"
"../components/fifo/include/spiram.h"
"../components/fifo/include/spiram_fifo.h"
"../components/mad/align.h"
"../components/mad/bit.h"
"../components/mad/config.h"
"../components/mad/decoder.h"
"../components/mad/fixed.h"
"../components/mad/frame.h"
"../components/mad/global.h"
"../components/mad/huffman.h"
"../components/mad/layer12.h"
"../components/mad/layer3.h"
"../components/mad/mad.h"
"../components/mad/stream.h"
"../components/mad/synth.h"
"../components/mad/timer.h"
"../components/mad/version.h"
"../components/MerusAudio/include/ma120x0.h"
"../components/MerusAudio/include/MerusAudio.h"
"../components/mp3_decoder/include/mp3_decoder.h"
"../components/u8g2/cppsrc/U8g2lib.h"
"../components/u8g2/cppsrc/U8x8lib.h"
"../components/u8g2/csrc/u8g2.h"
"../components/u8g2/csrc/u8g2_esp32_hal.h"
"../components/u8g2/csrc/u8x8.h"
"../components/ucglib/cppsrc/Ucglib.h"
"../components/ucglib/cppsrc_sdspi/SdFatConfig.h"
"../components/ucglib/cppsrc_sdspi/SdSpi.h"
"../components/ucglib/cppsrc_sdspi/Ucglib.h"
"../components/ucglib/csrc/ucg.h"
"../components/ucglib/csrc/ucg_esp32_hal.h"
"../components/ucglib/csrc/ucg_karadio32_fonts.h"
"../components/xpt2046/xpt2046.h")


                    include_directories ("include" "../components/audio_player/" "../components/audio_renderer/"  "../components/common/" "../components/fdk-aac_decoder/"  "../components/fifo/" "../components/mad" "../components/MerusAudio/" "../components/mp3_decoder/" "../components/u8g2/csrc" "../components/ucglib/csrc" "../components/xpt2046"
					"../components/audio_player/include" "../components/audio_renderer/include"   "../components/common/include" "../components/fdk-aac_decoder/include"  "../components/fdk-aac-oreo-m8/libAACdec/include/" "../components/fdk-aac-oreo-m8/libSYS/include/" "../components/fifo/include" "../components/mad" "../components/MerusAudio/include" "../components/mp3_decoder/include" "../components/u8g2/csrc" "../components/ucglib/csrc" "../components/xpt2046" 
					)